--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,15 @@
 	--bg: #1c1c1c;
 	--bg-light: #3d3a3a;
 	--fg: #dad3d3;
-	--acc1: #f43753;
-	--acc2: #a488d9;
+	--acc1: #d770af;
+	--acc2: #d28abf;
+	--acc3: #a488d9;
+	--acc4: #bd89de;
 }
 
 @font-face {
   font-family: monofur;
-  src: url(monofur.ttf);
+  src: url(../monofur.ttf);
 }
 
 body {
@@ -17,19 +19,17 @@ body {
 	display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 15px;
+    min-height: 15ch;
     min-width: 30px;
     padding: 3em;
 }
 
 p {
 	margin: 10;
-	pointer-events: none;
 }
 
 #clock{
 	float: right;
-	pointer-events: none;
 }
 
 html {
@@ -40,20 +40,17 @@ html {
 }
 
 a {
-	color: var(--acc2);
+	color: var(--acc3);
 	text-decoration: none;
 	margin: 8px;
-	pointer-events: auto;
 }
 
 .prompt {
 	color:  var(--fg);
-	pointer-events: none;
 }
 
 .purple {
 	color:  var(--acc1);
-	pointer-events: none;
 }
 
 
@@ -65,7 +62,6 @@ a:hover {
 ul {
     list-style-type: none;
     margin: 0;
-	pointer-events: none;
 }
 
 nav {
@@ -73,16 +69,16 @@ nav {
     display: grid;
     grid-template-columns: auto auto auto auto;
     padding: 1em 0;
-	pointer-events: none;
 }
 
 input {
 	background-color: var(--bg);
 	border: none;
+
 	color: var(--fg);
-	pointer-events: none;
 }
 
 input:focus {
-    outline: none;
+	outline:none;
+
 }
