added theme switching

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body.gruvbox-dark {
-    /* Empty definition to handle switching back to "dark" as default */
+    /* Empty is default */
 }
 
 body.nord {
