--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,9 @@ body.nord {
 body {
     background-color: var(--bg);
     font-family: 'JetBrains Mono', monospace;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 15px;
-    min-width: 30px;
-    padding: 3em;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 p {
@@ -41,10 +38,10 @@ p {
 }
 
 html {
-    align-items: center;
-    display: flex;
+    font-family: 'JetBrains Mono', monospace;
     height: 100%;
-    justify-content: center;
+    display: table;
+    margin: auto;
 }
 
 a {
@@ -52,6 +49,11 @@ a {
     text-decoration: none;
     margin: 8px;
     pointer-events: auto;
+}
+
+a:focus,
+a:hover {
+    font-weight: bold;
 }
 
 .prompt {
@@ -64,19 +66,15 @@ a {
     pointer-events: none;
 }
 
-a:focus,
-a:hover {
-    font-weight: bold;
-}
 
-input {
+input,
+input:focus {
     background-color: var(--bg);
+    fon: inherit;
+    margin: 0;
     border: none;
     color: var(--fg);
     pointer-events: none;
-}
-
-input:focus {
     outline: none;
 }
 
