--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,17 @@ body #promptContainer input, body #promptContainer input:focus {
   outline: none;
   pointer-events: none;
 }
-body li .item {
+body #links .title {
+  font-size: 20px;
+  margin: 8px;
+}
+body #links .padding {
+  padding-left: 45px;
+}
+body #links ul li .item {
   color: var(--acc2);
   padding-left: 8px;
   margin: 8px;
-}
-body li .padding {
-  padding-left: 45px;
 }
 body .material-icons.md-36 {
   font-size: 36px;
