--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: var(--bg-dark);
+  background-color: var(--bg);
   font-family: "JetBrains Mono", monospace;
   height: 100%;
   display: table-cell;
